--- a/template/@temp.html
+++ b/template/@temp.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,target-densitydpi=medium-dpi">
 	<title>마크업 리스트</title>
 	<style>
 		h1{font-size:20px;color:#444;}
@@ -16,14 +17,14 @@
 </head>
 <body>
 
-	<h1 id="title">서비스명</h1>
+<h1 id="title">서비스명</h1>
 
-	<p id="admin">작업자 : 홍길동</p>
+<p id="admin">작업자 : 홍길동</p>
 
-	<p id="date">마지막 수정 : 2015.00.00.</p>
+<p id="date">마지막 수정 : 2015.00.00.</p>
 
-	<ul id="list">
-	</ul>
+<ul id="list">
+</ul>
 
 </body>
 </html>
