--- a/template/@temp.html
+++ b/template/@temp.html
@@ -6,13 +6,14 @@
 	<title>마크업 리스트</title>
 	<style>
 		h1{font-size:20px;color:#444;}
+		h2{margin:15px 0 0;font-size:16px;}
 		#admin, #date{margin:5px 0;font-size:11px;color:#999;}
-		#list{margin:20px 0 0;padding:0;}
-		#list li{list-style:none;margin:0;padding:0;border-top:1px solid #eaeaea;}
-		#list li:first-child{border-top:3px solid #444;}
-		#list a{display:block;padding:10px 31px 10px 5px;text-decoration:none;color:#000;font-size:13px;background:url(data:image/gif;base64,R0lGODlhEQAJAIABAJWVlf///yH5BAEAAAEALAAAAAARAAkAAAITBIKpa7efGpxyvmoRztt272RJAQA7) no-repeat 100% 50%;}
-		#list a:hover{background-color:#effcff;}
-		#list a span{margin-left:10px;color:#aaa;font-style:italic;}
+		.list{margin:5px 0 0;padding:0;}
+		.list li{list-style:none;margin:0;padding:0;border-top:1px solid #eaeaea;}
+		.list li:first-child{border-top:3px solid #444;}
+		.list a{display:block;padding:10px 31px 10px 5px;text-decoration:none;color:#000;font-size:13px;background:url(data:image/gif;base64,R0lGODlhEQAJAIABAJWVlf///yH5BAEAAAEALAAAAAARAAkAAAITBIKpa7efGpxyvmoRztt272RJAQA7) no-repeat 100% 50%;}
+		.list a:hover{background-color:#effcff;}
+		.list a span{margin-left:10px;color:#aaa;}
 	</style>
 </head>
 <body>
@@ -23,8 +24,9 @@
 
 <p id="date">마지막 수정 : 2015.00.00.</p>
 
-<ul id="list">
-</ul>
+<div class="content">
+
+</div>
 
 </body>
 </html>
