--- a/template/@temp.html
+++ b/template/@temp.html
@@ -6,8 +6,10 @@
 	<title>마크업 리스트</title>
 	<style>
 		h1{font-size:20px;color:#444;}
-		h2{margin:15px 0 0;font-size:16px;}
+		h2{overflow:hidden;margin:15px 0 0;font-size:16px;}
+		h2>em{float:right;font-size:13px;font-style:normal;}
 		#admin, #date{margin:5px 0;font-size:11px;color:#999;}
+		#count{margin: 5px 0;font-size:14px;font-weight:700;color:#555;text-align:right;}
 		.list{margin:5px 0 0;padding:0;}
 		.list li{list-style:none;margin:0;padding:0;border-top:1px solid #eaeaea;}
 		.list li:first-child{border-top:3px solid #444;}
@@ -25,7 +27,7 @@
 <p id="date">마지막 수정 : 2015.00.00.</p>
 
 <div class="content">
-
+	<div id="count"></div>
 </div>
 
 </body>
