해ë빈 폴더일 경우 skip

--- a/template/@temp.html
+++ b/template/@temp.html
@@ -20,11 +20,11 @@
 </head>
 <body>
 
-<h1 id="title">서비스명</h1>
+<h1 id="title"></h1>
 
-<p id="admin">작업자 : 홍길동</p>
+<p id="admin"></p>
 
-<p id="date">마지막 수정 : 2015.00.00.</p>
+<p id="date"></p>
 
 <div class="content">
 	<div id="count"></div>
